<resources>
    <string name="app_name">BottomNavigationView</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_logout">Logout</string>
    <string name="title_activity_history">History</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="conveyor">Conveyor</string>
    <string name="kerusakan">Kerusakan</string>
    <string name="keterangan">Keterangan</string>
    <string name="teknisi">Teknisi</string>
    <string name="berikan_rating_anda">Rating ke GL</string>
    <string name="feedback_dari_teknisi">Feedback ke GL</string>
    <string name="give_rating">Kirim Rating dan Feedback</string>
    <string name="status">Status</string>
    <string name="start_date">Start Date</string>
    <string name="waktu_datang">Waktu Datang</string>
    <string name="teknisi_yang_datang">Teknisi yang Datang</string>
    <string name="waktu_selesai">Waktu Selesai</string>
    <string name="status_konfirmasi">Status Konfirmasi</string>
    <string name="qrcode">Qrcode</string>
    <string name="hasil_qrcode">Hasil Qrcode</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="validasi_qr">Validasi QR</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="teknisi_yang_konfirmasi">Teknisi yang Konfirmasi</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="rating">Rating :</string>
    <string name="rating_gl">Rating dari GL</string>
    <string name="feedback_gl">Feedback dari GL</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Logout</string>
    <string name="drawerOpen">Open Drawer</string>
    <string name="drawerClose">Close Drawer</string>
    <string name="nik">NIK</string>
    <string name="nama">NAMA</string>
    <string name="ip_address">Ip Address</string>
</resources>
