<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ekybintarnow.bottomnavigationview.DetailHistory">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lihatId"
            android:visibility="gone"
            android:focusable="false"
            android:cursorVisible="false"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conveyor" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lihatConveyor"
            android:focusable="false"
            android:cursorVisible="false"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kerusakan" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lihatKerusakan"
            android:focusable="false"
            android:cursorVisible="false"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lihatKeterangan"
            android:focusable="false"
            android:cursorVisible="false"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teknisi"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lihatTeknisi"
            android:focusable="false"
            android:cursorVisible="false"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_gl"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lihatRatingGL"
            android:focusable="false"
            android:cursorVisible="false"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor"
            android:visibility="gone"/>
        <RatingBar
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBarGL"
            android:numStars="0"
            android:stepSize="0.5"
            android:isIndicator="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_gl"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lihatFeedbackGL"
            android:focusable="false"
            android:cursorVisible="false"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:ignore="UselessLeaf" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/berikan_rating_anda"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <RatingBar
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:id="@+id/ratingBar"
                android:numStars="0"
                android:stepSize="0.5"/>

            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/ratingValue"
                android:textAlignment="center"
                android:focusable="false"
                android:cursorVisible="false"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_dari_teknisi"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/feedbackTeknisi"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/capsule_tombol"
            android:text="@string/give_rating"
            android:id="@+id/btnRating"/>

    </LinearLayout>

</ScrollView>