<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ekybintarnow.bottomnavigationview.Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/group_2"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et_username"
        android:paddingStart="10dp"
        android:layout_width="229dp"
        android:layout_height="61dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/capsule"
        android:ems="10"
        android:hint="@string/enter_username"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="229dp"
        android:paddingStart="10dp"
        android:layout_height="61dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/capsule"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:singleLine="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        tools:ignore="Autofill,RtlSymmetry" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/capsule"
        android:text="@string/login"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/wifiIP"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:text="@string/ip_address"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:layout_editor_absoluteX="91dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>
